[gd_scene load_steps=2 format=3 uid="uid://cj8v0xh5qn8mk"]

[ext_resource type="Script" path="res://scripts/chat_box.gd" id="1_chat_box"]

[node name="ChatBox" type="PanelContainer"]
custom_minimum_size = Vector2(300, 200)
offset_right = 300.0
offset_bottom = 200.0
script = ExtResource("1_chat_box")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 160)
layout_mode = 2
size_flags_vertical = 3

[node name="MessageLog" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ChatInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Type here..."
